force-app/main/default/objects/Referral_Account__c/fields/Referral_Source_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Business_Type__c</fullName>
    <description>Please notify Dan C before adding/changing values in this picklist. This is used in the WAR integration and if the mapping isn&apos;t correct the records won&apos;t sync.</description>
    <label>Referral Source Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Firm</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Broker Dealer Branch</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Full Service Agency</fullName>
            </value>
            <value>
                <fullName>Health Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>MSP Partner</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paychex Co</fullName>
            </value>
            <value>
                <fullName>Payroll Company</fullName>
            </value>
            <value>
                <fullName>PEO Broker</fullName>
            </value>
            <value>
                <fullName>Private Equity Firm</fullName>
            </value>
            <value>
                <fullName>P&amp;C Broker</fullName>
                <label>Property and Casualty Broker</label>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Strategic Accountant Firm</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>