force-app/main/default/objects/Referral_Account__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>52 Bank Tier 1</fullName>
            </value>
            <value>
                <fullName>52 Bank Tier 2</fullName>
            </value>
            <value>
                <fullName>70 IIA Contracted</fullName>
            </value>
            <value>
                <fullName>70 IIA General</fullName>
            </value>
            <value>
                <fullName>76 Money Manager</fullName>
            </value>
            <value>
                <fullName>90 Employee</fullName>
            </value>
            <value>
                <fullName>Accounting Firm</fullName>
            </value>
            <value>
                <fullName>Bank - Tier 1</fullName>
            </value>
            <value>
                <fullName>Bank - Tier 2</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
            <value>
                <fullName>Bank - Non-partner</fullName>
            </value>
            <value>
                <fullName>IFA Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>