force-app/main/default/objects/Referral_Account__c/fields/ReferralPaymentEnd__c.field-meta.xml
<CustomField>
    <fullName>ReferralPaymentEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The end date of a referral payment agreement with this vendor.</inlineHelpText>
    <label>Referral Payment End</label>
    <type>Date</type>
</CustomField>