force-app/main/default/objects/Referral_Account__c/fields/ReferralPaymentStart__c.field-meta.xml
<CustomField>
    <fullName>ReferralPaymentStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The start date of a referral payment agreement with this vendor</inlineHelpText>
    <label>Referral Payment Start</label>
    <type>Date</type>
</CustomField>