force-app/main/default/objects/Referral_Account__c/fields/ReferralProducts__c.field-meta.xml
<CustomField>
    <fullName>ReferralProducts__c</fullName>
    <inlineHelpText>If this is a referral source, there are the products available for referral. This should be set at the parent level.</inlineHelpText>
    <label>Available Referral Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>401(k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>