force-app/main/default/objects/Referral_Account__c/fields/ReferralSourceSubType__c.field-meta.xml
<CustomField>
    <fullName>ReferralSourceSubType__c</fullName>
    <inlineHelpText>If a further breakdown needs to be made, it can be identified here. Primary ownership should be derived from the Record Type.</inlineHelpText>
    <label>Referral Source Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Source_Business_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Advance Partners</fullName>
            </value>
            <value>
                <fullName>BenAdmin</fullName>
            </value>
            <value>
                <fullName>MSP Partner</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
            <value>
                <fullName>PEO Enterprise Group</fullName>
            </value>
            <value>
                <fullName>PEO Field Strategic Account</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Designated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>