force-app/main/default/objects/Referral_Account__c/fields/SecondaryLeadSource__c.field-meta.xml
<CustomField>
    <fullName>SecondaryLeadSource__c</fullName>
    <formula>IF (ISPICKVAL(Referral_Type__c, &quot;52 Bank Tier 2&quot;)
    , IF (AND(PartnerId__c != null
         , NOT(ISBLANK(ReferralPaymentStart__c)), ReferralPaymentStart__c &lt;= TODAY()
         , OR (ISBLANK(ReferralPaymentEnd__c), ReferralPaymentEnd__c &gt;= TODAY())
        )
        ,&quot;Local Bank with Agreement&quot;
        ,&quot;Local Bank without Agreement&quot;)
    , IF (AND(ISPICKVAL(Referral_Type__c, &quot;52 Bank Tier 1&quot;), PartnerId__c != null)
         ,SecondaryLeadSourceValue__c
         ,&quot;&quot;)
)</formula>
    <label>Secondary Lead Source</label>
    <type>Text</type>
</CustomField>