force-app/main/default/objects/Referral_Account__c/fields/Sensitivity_401_k__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_401_k__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitivity 401(k)</label>
    <type>Checkbox</type>
</CustomField>