force-app/main/default/objects/Referral_Account__c/fields/Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity__c</fullName>
    <inlineHelpText>What sensitivity does this Referral Account have?</inlineHelpText>
    <label>Sensitivity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>