force-app/main/default/objects/Referral_Account__c/fields/Sensitivity_Credit_Card_Processing__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Credit_Card_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitivity Credit Card Processing</label>
    <type>Checkbox</type>
</CustomField>