force-app/main/default/objects/Referral_Account__c/fields/Sensitivity_FSA__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_FSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitivity FSA</label>
    <type>Checkbox</type>
</CustomField>