force-app/main/default/objects/Referral_Account__c/fields/Sensitivity_HR_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_HR_Consulting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitivity HR Consulting</label>
    <type>Checkbox</type>
</CustomField>