force-app/main/default/objects/Referral_Account__c/fields/Sensitivity_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Sales_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitivity Sales Tax</label>
    <type>Checkbox</type>
</CustomField>