force-app/main/default/objects/Referral_Account__c/fields/Sensitivity_Wrks_Comp__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Wrks_Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitivity Wrks Comp</label>
    <type>Checkbox</type>
</CustomField>