force-app/main/default/objects/Referral_Account__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State/Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>