force-app/main/default/objects/Referral_Account__c/fields/Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street Address 1</label>
    <length>132</length>
    <type>Text</type>
</CustomField>