force-app/main/default/objects/Referral_Account__c/fields/Sure_Payroll_Hosting_Status__c.field-meta.xml
<CustomField>
    <fullName>Sure_Payroll_Hosting_Status__c</fullName>
    <label>SurePayroll Hosting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>inactive</fullName>
            </value>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>enrolled</fullName>
            </value>
            <value>
                <fullName>opportunity not sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>