force-app/main/default/objects/Referral_Account__c/fields/SurePayroll_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>SurePayroll_Client_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SurePayroll Client ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>