force-app/main/default/objects/Referral_Account__c/fields/TimeZoneAbbrev__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneAbbrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Time zone of this referral account.</inlineHelpText>
    <label>Time Zone Abbrev</label>
    <length>5</length>
    <type>Text</type>
</CustomField>