force-app/main/default/objects/Referral_Account__c/fields/Use_Zip_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Use_Zip_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked on insert of a record, the process will use the zip code to determine the ownership fields.</inlineHelpText>
    <label>Use Zip Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>