force-app/main/default/objects/Referral_Account__c/fields/User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>