force-app/main/default/objects/Referral_Account__c/fields/Wholesale_Notes__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wholesale Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>