force-app/main/default/objects/Referral_Account__c/fields/Year_Business_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Business_Founded__c</fullName>
    <description>Used for executive reporting on Acquisition Pipeline</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year Business Founded</label>
    <type>Date</type>
</CustomField>