force-app/main/default/objects/Referral_Account__c/recordTypes/CoreReferralSourceRecordType.recordType-meta.xml
<RecordType>
    <fullName>CoreReferralSourceRecordType</fullName>
    <active>true</active>
    <description>Used by SMB Channel to manage their referral source relationships</description>
    <label>Core Referral Source Record Type</label>
</RecordType>