force-app/main/default/objects/Referral_Account__c/recordTypes/HRSReferralSourceRecordType.recordType-meta.xml
<RecordType>
    <fullName>HRSReferralSourceRecordType</fullName>
    <active>true</active>
    <description>Used by Wholesaler team to manage their Financial Advisor relationships</description>
    <label>HRS Referral Source Record Type</label>
</RecordType>