force-app/main/default/objects/Referral_Account__c/recordTypes/MMS_Referral_Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>MMS_Referral_Account_Record_Type</fullName>
    <active>true</active>
    <description>Used by MMS to manage their referral source relationships</description>
    <label>MMS Referral Account Record Type</label>
</RecordType>