force-app/main/default/objects/Referral_Account__c/recordTypes/PaychexInternalReferralAccountRecordType.recordType-meta.xml
<RecordType>
    <fullName>PaychexInternalReferralAccountRecordType</fullName>
    <active>true</active>
    <label>Paychex Internal Referral Account Record Type</label>
</RecordType>