force-app/main/default/objects/Referral_Account__c/recordTypes/Prism_PEO_Referral_Source.recordType-meta.xml
<RecordType>
    <fullName>Prism_PEO_Referral_Source</fullName>
    <active>true</active>
    <description>Used by PEO to manage their referral source relationships</description>
    <label>Prism PEO Referral Source</label>
</RecordType>