force-app/main/default/objects/Referral_Account__c/recordTypes/Sales_Channel_Referral_Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Sales_Channel_Referral_Account_Record_Type</fullName>
    <active>true</active>
    <description>Used by Strategic Accounts to manage strategic account relationships</description>
    <label>Sales Channel Referral Account Record Type</label>
</RecordType>