force-app/main/default/objects/Referral_Account__c/recordTypes/Sales_Partner_Referral_Account_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Sales_Partner_Referral_Account_Record_Type</fullName>
    <active>true</active>
    <description>Partners</description>
    <label>Sales Partner Referral Account Record Type</label>
</RecordType>