force-app/main/default/objects/Referral_Account__c/validationRules/Bank_Records_managed_by_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Records_managed_by_Channel</fullName>
    <active>true</active>
    <description>Certain fields can only be modified by Sys Admin or Bank Channel Manager profiles to ensure the integrity of the data</description>
    <errorConditionFormula>AND( AND

(
NOT(BEGINS($UserRole.Name, &quot;Strategic Accounts&quot;)) ,
NOT(BEGINS($UserRole.Name,&apos;BUSINESS DEVELOPMENT&apos;)), 
NOT(BEGINS($UserRole.Name,&apos;System Administrator&apos;)),
NOT(BEGINS($UserRole.Name,&apos;Sales Account Manager&apos;)),
$Profile.Id &lt;&gt;&quot;00e70000001JtU2&quot;,
$Profile.Id &lt;&gt;&quot;00e70000001JszN&quot;,
$Profile.Id &lt;&gt;&quot;00e7000000144Z9&quot;
),  
Managed_by_Channel__c=TRUE, OR( ISCHANGED( Name ),  
ISCHANGED( Phone__c ),  
ISCHANGED( Street_Address_1__c ),  ISCHANGED( Street_Address_2__c ),  ISCHANGED( City__c ),  ISCHANGED( State_Province__c ),  ISCHANGED( Zip_Postal_Code__c ),  ISCHANGED( Referral_Source_Business_Type__c )))</errorConditionFormula>
    <errorMessage>Name, Phone, Address, and Referral Source Business Type can only be edited by System Admin, Bank Channel Managers and National Account Managers.</errorMessage>
</ValidationRule>