force-app/main/default/objects/Referral_Account__c/validationRules/Common_Remitter_Start_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Remitter_Start_Date_Required</fullName>
    <active>true</active>
    <description>if the Common Remitter check box is checked you must fill in a start date</description>
    <errorConditionFormula>Common_Remitter_Participation__c == True &amp;&amp;
ISNULL(Common_Remitter_Start_Date__c) &amp;&amp;
NOT($Profile.Id == &quot;00e30000000mTjP&quot;)</errorConditionFormula>
    <errorMessage>If the Common Remitter Checkbox is checked you must enter a Common Remitter Start Date.</errorMessage>
</ValidationRule>