force-app/main/default/objects/Referral_Account__c/validationRules/Hold_Out_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Out_Reason_Required</fullName>
    <active>true</active>
    <description>Hold Out Reason is required when setting a hold out. Case 36704795</description>
    <errorConditionFormula>AND(
NOT(BEGINS($Profile.Name,&quot;System Admin&quot;)),
OR(ISCHANGED( Hold_Out__c ),ISCHANGED(Hold_Out_Reason__c )),
Hold_Out__c = true,
ISNULL( Hold_Out_Expiration__c ),
ISBLANK( TEXT(Hold_Out_Reason__c )))</errorConditionFormula>
    <errorDisplayField>Hold_Out_Reason__c</errorDisplayField>
    <errorMessage>Hold Out Reason is required when setting a hold out</errorMessage>
</ValidationRule>