force-app/main/default/objects/Referral_Account__c/validationRules/Percent_of_Profit_Value_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_of_Profit_Value_Required</fullName>
    <active>true</active>
    <description>Percent of Profit Value is required when commission method is % of Profit</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Commission_Method__c,&apos;PctProfit&apos;),
  ISBLANK(Pct_Profit_Value__c)


)</errorConditionFormula>
    <errorMessage>Percent of Profit Value is required when commission method is % of Profit</errorMessage>
</ValidationRule>