force-app/main/default/objects/Referral_Account__c/validationRules/Require_End_Date_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_End_Date_Reason</fullName>
    <active>true</active>
    <description>You must enter an End Date Reason if End Date is populated.</description>
    <errorConditionFormula>NOT(BEGINS($Profile.Name, &apos;System Admin&apos;)) &amp;&amp; ISBLANK(PRIORVALUE(End_Date__c )) &amp;&amp; NOT(ISBLANK(End_Date__c )) &amp;&amp; ISPICKVAL(End_Date_Reason__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>End_Date_Reason__c</errorDisplayField>
    <errorMessage>You must enter an End Date Reason if End Date is populated.</errorMessage>
</ValidationRule>